--- a/floworld/res/layout/appreciate_archiver_list_item.xml
+++ b/floworld/res/layout/appreciate_archiver_list_item.xml
@@ -17,7 +17,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
-        android:src="@drawable/appreciate_tab_list_item_arrow"/>
+        android:src="@drawable/app_arrow"/>
     <LinearLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
