--- a/baseworld/res/layout/main_tab_frame.xml
+++ b/baseworld/res/layout/main_tab_frame.xml
@@ -31,6 +31,6 @@
         android:layout_below="@id/main_tab_banner"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#FFFFE0">
+        android:background="@color/bg">
     </LinearLayout>
 </RelativeLayout>
