--- a/baseworld/res/values/colors.xml
+++ b/baseworld/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="bg">#ffffffff</color>
+    <color name="gray_light">#ffb0b0b0</color>
+    <color name="gray">#ff808080</color>
 </resources>
