--- a/floworld/res/layout/discuss_tab_activity.xml
+++ b/floworld/res/layout/discuss_tab_activity.xml
@@ -3,6 +3,22 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+    <LinearLayout android:id="@+id/app_loading"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="5dip">
+        <ProgressBar android:layout_width="24dip"
+            android:layout_height="24dip"
+            android:indeterminateDrawable="@anim/app_refresh_progress"
+            android:layout_gravity="center"/>
+        <TextView android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" 请稍候，数据正在加载中..."
+            android:padding="5dip"
+            android:textColor="@color/gray_light"/>
+    </LinearLayout>
     <ListView android:id="@+id/discuss_tab_list"
         android:layout_width="fill_parent" 
         android:layout_height="fill_parent"
