--- a/floworld/res/layout/discuss_details_activity.xml
+++ b/floworld/res/layout/discuss_details_activity.xml
@@ -43,5 +43,6 @@
     </RelativeLayout>
     <WebView android:id="@+id/discuzz_details_webview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"></WebView>
+        android:layout_height="fill_parent"
+        android:scrollbars="none"></WebView>
 </LinearLayout>
