adjust the bg color almost to white and add the listview's divider drawable for all version's devices looks same

--- a/floworld/res/layout/main_tab_frame.xml
+++ b/floworld/res/layout/main_tab_frame.xml
@@ -88,6 +88,6 @@
         android:layout_below="@id/main_tab_banner"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#FFFFE0">
+        android:background="#FFFFFA">
     </LinearLayout>
 </RelativeLayout>
