--- a/floworld/res/layout/appreciate_tab_activity.xml
+++ b/floworld/res/layout/appreciate_tab_activity.xml
@@ -2,12 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#FFFFE0">
+    android:layout_height="fill_parent">
     <ListView android:id="@+id/appreciate_tab_list"
         android:layout_width="fill_parent" 
         android:layout_height="fill_parent"
-        android:cacheColorHint="#00000000"
-        android:background="#FFFFE0">
+        android:divider="@drawable/app_divider_h_gray"
+        android:cacheColorHint="#00000000">
     </ListView>
 </LinearLayout>
