--- a/floworld/res/layout/discuss_tab_activity.xml
+++ b/floworld/res/layout/discuss_tab_activity.xml
@@ -23,6 +23,6 @@
         android:layout_width="fill_parent" 
         android:layout_height="fill_parent"
         android:cacheColorHint="#00000000"
-        android:background="#FFFFE0">
+         android:divider="@drawable/app_divider_h_gray">
     </ListView>
 </LinearLayout>
