--- a/floworld/res/layout/identification_tab_activity.xml
+++ b/floworld/res/layout/identification_tab_activity.xml
@@ -2,40 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/icon">
-    <com.tianxia.widget.image.SmartImageView android:id="@+id/identification_image"
-             android:layout_width="fill_parent"
-             android:layout_height="fill_parent"
-             android:scaleType="centerCrop" />
-    <TextView  
-        android:layout_width="fill_parent" 
+    android:layout_height="fill_parent">
+    <LinearLayout android:id="@+id/app_loading"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="请选择下图的花名:"
-        />
-    <RadioGroup android:id="@+id/ataawGroup"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="5dip">
+        <ProgressBar android:layout_width="24dip"
+            android:layout_height="24dip"
+            android:indeterminateDrawable="@anim/app_refresh_progress"
+            android:layout_gravity="center"/>
+        <TextView android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" 请稍候，数据正在加载中..."
+            android:padding="5dip"
+            android:textColor="@color/gray_light"/>
+    </LinearLayout>
+    <GridView android:id="@+id/identification_list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:checkedButton="@+id/ataaw3"
-        android:orientation="vertical"
-        android:gravity="center_vertical|center_horizontal"> 
-        <RadioButton android:id="@+id/ataaw1"
-            android:text="花名1"
-            android:textSize="16dip"
-            android:textColor="#192F06"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></RadioButton>
-        <RadioButton android:id="@+id/ataaw2"
-            android:text="花名2"
-            android:textSize="16dip"
-            android:textColor="#192F06"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></RadioButton>
-        <RadioButton android:id="@+id/ataaw3"
-            android:text="花名3"
-            android:textSize="16dip"
-            android:textColor="#192F06"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></RadioButton>
-    </RadioGroup>
+        android:fastScrollEnabled="true"
+        android:gravity="center"
+        android:numColumns="3"
+        android:layout_margin="4dip"
+        android:listSelector="@null"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="4dip"
+        android:horizontalSpacing="4dip"
+        android:cacheColorHint="#00000000"
+        android:background="#FFFFE0">
+    </GridView>
 </LinearLayout>
