--- a/floworld/res/layout/appreciate_latest_details_activity.xml
+++ b/floworld/res/layout/appreciate_latest_details_activity.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FFFFE0">
-    <com.tianxia.widget.image.SmartImageView android:id="@+id/appreciate_latest_details_image"
-             android:layout_width="fill_parent"
-             android:layout_height="fill_parent"
-             android:scaleType="centerCrop" />
+    android:background="#000000">
+    <com.tianxia.widget.gallery.PicGallery android:id="@+id/appreciate_latest_details_gallery"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fadingEdgeLength="2dip"/>
 </LinearLayout>
