fix some bugs as follow: 1. show order on details view's app titile bar 2. show the prefix before title when view the details gallery 3. add the values-zh-rCN dir for language internationalization

--- a/floworld/res/layout/appreciate_latest_details_activity.xml
+++ b/floworld/res/layout/appreciate_latest_details_activity.xml
@@ -12,7 +12,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dip"
-        android:background="@drawable/main_banner_bg">
+        android:background="@drawable/main_banner_bg"
+        android:visibility="invisible">
         <Button android:id="@+id/app_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,7 +25,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/details_title"
             android:textSize="20dip"
             android:textColor="#000000"/>
     </RelativeLayout>
@@ -34,5 +34,6 @@
         android:gravity="center"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="50dip"
-        android:background="@drawable/app_tips_bg"/>
+        android:background="@drawable/app_tips_bg"
+        android:visibility="invisible"/>
 </FrameLayout>
