--- a/floworld/res/layout/appreciate_archiver_list_item.xml
+++ b/floworld/res/layout/appreciate_archiver_list_item.xml
@@ -4,8 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <ImageView android:id="@+id/item_image"
-        android:layout_width="84dip"
-        android:layout_height="68dip"
+        android:layout_width="64dip"
+        android:layout_height="52dip"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_margin="2dip"
@@ -25,22 +25,30 @@
         android:layout_toRightOf="@id/item_image"
         android:layout_marginLeft="5dip"
         android:orientation="vertical">
-        <TextView android:id="@+id/item_index"
-            android:layout_width="wrap_content"
+        <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="18dip"
-            android:textColor="@android:color/black"
-            android:singleLine="true"
-            android:ellipsize="end"/>
-        <TextView android:id="@+id/item_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:ellipsize="end"/>
+            android:orientation="horizontal">
+            <TextView android:id="@+id/item_index"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18dip"
+                android:textColor="@android:color/black"
+                android:singleLine="true"
+                android:ellipsize="end"/>
+            <TextView android:id="@+id/item_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:textSize="12dip"
+                android:textColor="#192F06"
+                android:ellipsize="end"/>
+        </LinearLayout>
         <TextView android:id="@+id/item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true"
+            android:textSize="12dip"
+            android:textColor="#192F06"
             android:ellipsize="end"/>
     </LinearLayout>
 </RelativeLayout>
