convert the app_tips_bg to 9patch png and add the image-scale-type arg in some cases

--- a/floworld/res/layout/appreciate_latest_details_activity.xml
+++ b/floworld/res/layout/appreciate_latest_details_activity.xml
@@ -32,6 +32,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dip"
+        android:padding="4dip"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="50dip"
         android:background="@drawable/app_tips_bg"
