--- a/floworld/res/layout/main_tab_setting.xml
+++ b/floworld/res/layout/main_tab_setting.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true">
+<LinearLayout
     android:orientation="vertical"
     android:id="@+id/setting"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="wrap_content">
 </LinearLayout>
+</ScrollView>
