improve the ui and code style:
1. change catogory count show position
2. change the bg color to fffffa
3. ref to res for string instead of write it in the xml directly
4. clean some invalid code and layout files

--- a/floworld/res/layout/appreciate_archiver_activity.xml
+++ b/floworld/res/layout/appreciate_archiver_activity.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FFFFE0">
+    android:background="#FFFFFA">
     <RelativeLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dip"
@@ -12,7 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="返回"
+            android:text="@string/app_back"
             android:layout_alignParentLeft="true"
             android:background="@drawable/app_btn_back"/>
         <TextView android:id="@+id/appreciate_archiver_title"
@@ -36,8 +36,6 @@
             <ImageView android:id="@+id/app_loading_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
                 android:src="@drawable/app_icon_refresh"
                 android:visibility="gone"/>
         </FrameLayout>
@@ -46,7 +44,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
-            android:text="正在拉取数据..."/>
+            android:text="@string/app_loading"/>
     <ListView android:id="@+id/appreciate_archiver_list"
         android:layout_width="fill_parent" 
         android:layout_height="fill_parent"
