--- a/floworld/res/layout/appreciate_category_activity.xml
+++ b/floworld/res/layout/appreciate_category_activity.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FFFFE0">
+    android:background="#FFFFFA">
     <RelativeLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dip"
@@ -12,14 +12,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="返回"
+            android:text="@string/app_back"
             android:layout_alignParentLeft="true"
             android:background="@drawable/app_btn_back"/>
         <TextView android:id="@+id/appreciate_category_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="分类图片"
+            android:text="@string/category_title"
             android:textSize="20dip"
             android:textColor="#000000"/>
         <FrameLayout android:layout_width="wrap_content"
@@ -36,8 +36,6 @@
             <ImageView android:id="@+id/app_loading_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
                 android:src="@drawable/app_icon_refresh"
                 android:visibility="gone"/>
         </FrameLayout>
@@ -46,7 +44,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
-            android:text="正在拉取数据..."/>
+            android:text="@string/app_loading"/>
     <GridView android:id="@+id/appreciate_category_list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -59,6 +57,6 @@
         android:verticalSpacing="4dip"
         android:horizontalSpacing="4dip"
         android:cacheColorHint="#00000000"
-        android:background="#FFFFE0">
+        android:background="#FFFFFA">
     </GridView>
 </LinearLayout>
