--- a/floworld/res/layout/appreciate_company_activity.xml
+++ b/floworld/res/layout/appreciate_company_activity.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FFFFE0">
+    android:background="#FFFFFA">
     <RelativeLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dip"
