--- a/floworld/res/layout/appreciate_latest_details_item.xml
+++ b/floworld/res/layout/appreciate_latest_details_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FFFFE0">
+    android:background="#FFFFFA">
     <com.tianxia.widget.image.SmartImageView android:id="@+id/item_image"
              android:layout_width="fill_parent"
              android:layout_height="90dip"
