--- a/floworld/res/layout/appreciate_latest_list_item.xml
+++ b/floworld/res/layout/appreciate_latest_list_item.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:padding="1px"
         android:orientation="vertical"
-        android:background="#FFFFE0">
+        android:background="#FFFFFA">
         <com.tianxia.widget.image.SmartImageView android:id="@+id/item_image"
              android:layout_width="fill_parent"
              android:layout_height="90dip"
