--- a/floworld/res/layout/favorite_tab_activity.xml
+++ b/floworld/res/layout/favorite_tab_activity.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:padding="2dip"
-        android:background="#FFFFE0">
+        android:background="#FFFFFA">
         <Button android:id="@+id/app_category_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
