--- a/floworld/res/layout/identification_tab_activity.xml
+++ b/floworld/res/layout/identification_tab_activity.xml
@@ -15,7 +15,7 @@
             android:layout_gravity="center"/>
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" 请稍候，数据正在加载中..."
+            android:text="@string/app_loading"
             android:padding="5dip"
             android:textColor="@color/gray_light"/>
     </LinearLayout>
@@ -31,6 +31,6 @@
         android:verticalSpacing="4dip"
         android:horizontalSpacing="4dip"
         android:cacheColorHint="#00000000"
-        android:background="#FFFFE0">
+        android:background="#FFFFFA">
     </GridView>
 </LinearLayout>
