--- a/floworld/res/layout/appreciate_search_activity.xml
+++ b/floworld/res/layout/appreciate_search_activity.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:umadsdk="http://schemas.android.com/apk/res/com.tianxia.app.floworld"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <RelativeLayout android:id="@+id/main_banner"
-        android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#FFFFFA">
+    <RelativeLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dip"
-        android:layout_alignParentTop="true"
         android:background="@drawable/main_banner_bg">
         <Button android:id="@+id/app_back"
             android:layout_width="wrap_content"
@@ -17,11 +15,11 @@
             android:text="@string/app_back"
             android:layout_alignParentLeft="true"
             android:background="@drawable/app_btn_back"/>
-        <TextView android:id="@+id/appreciate_latest_title"
+        <TextView android:id="@+id/appreciate_search_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/discuss_details_title"
+            android:text="@string/search_title"
             android:textSize="20dip"
             android:textColor="#000000"/>
         <FrameLayout android:layout_width="wrap_content"
@@ -36,24 +34,11 @@
                 android:indeterminateDrawable="@anim/app_refresh_progress"
                 android:layout_gravity="center_horizontal"/>
             <ImageView android:id="@+id/app_loading_btn"
-                android:layout_width="24dip"
-                android:layout_height="24dip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/app_refresh"
                 android:src="@drawable/app_icon_refresh"
                 android:visibility="gone"/>
         </FrameLayout>
     </RelativeLayout>
-    <net.youmi.android.AdView
-        android:id="@+id/adView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        umadsdk:textColor="#ffffff"
-        umadsdk:backgroundColor="#4076AA"
-        umadsdk:backgroundTransparent="155"/>
-    <WebView android:id="@+id/discuzz_details_webview"
-        android:layout_above="@id/adView"
-        android:layout_below="@id/main_banner"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scrollbars="none"></WebView>
-</RelativeLayout>
+</LinearLayout>
