many add and fix:
1. add two discuss articles
2. impl the jump to market
3. impl share app to freinds
4. impl feedback suggestion
5. improve the aboout activity
6. add smsto and tel path to contact us
7. add the donate item for preparing the android epay
8. improve the icon

--- a/floworld/res/layout/appreciate_latest_activity.xml
+++ b/floworld/res/layout/appreciate_latest_activity.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#FFFFFA">
+    android:layout_height="fill_parent">
     <RelativeLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dip"
