--- a/floworld/res/layout/setting_about_activity.xml
+++ b/floworld/res/layout/setting_about_activity.xml
@@ -23,9 +23,41 @@
             android:textSize="20dip"
             android:textColor="#000000"/>
     </RelativeLayout>
-    <TextView android:id="@+id/app_loading_tip"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            android:text="@string/app_loading"/>
+    <LinearLayout android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
+        <LinearLayout android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+            <ImageView android:layout_width="48dip"
+                android:layout_height="48dip"
+                android:src="@drawable/icon"
+                android:layout_margin="5dip"/>
+            <TextView  android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:text="@string/app_name"
+                android:gravity="center_vertical"
+                android:textSize="20dip"
+                android:textColor="#000000"/>
+        </LinearLayout>
+        <TextView  android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:layout_gravity="center"
+                android:textSize="20dip"
+                android:textColor="#000000"/>
+        <TextView  android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:layout_gravity="center"
+                android:textSize="20dip"
+                android:textColor="#000000"/>
+        <TextView  android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:layout_gravity="center"
+                android:textSize="20dip"
+                android:textColor="#000000"/>
+    </LinearLayout>
 </LinearLayout>
