--- a/baseworld/res/layout/umeng_analyse_send_feedback.xml
+++ b/baseworld/res/layout/umeng_analyse_send_feedback.xml
@@ -5,12 +5,12 @@
 	android:id="@+id/umeng_analyse_rootId" android:background="#EFEFEF">
 
 	<RelativeLayout android:layout_width="fill_parent"
-		android:layout_height="50dip" android:background="@drawable/umeng_analyse_feedback_bar_bg">
+		android:layout_height="wrap_content" android:background="@drawable/umeng_analyse_feedback_bar_bg">
 		<TextView android:id="@+id/umeng_analyse_feedback_umeng_title"
 			android:layout_width="wrap_content" android:textColor="#565656"
 			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
 			android:layout_centerVertical="true" android:layout_marginLeft="12dip"
-			android:text="反馈问题" android:textSize="22dip" />
+			android:text="反馈问题" android:textSize="20dip" />
 		<ImageButton android:id="@+id/umeng_analyse_feedback_see_list_btn"
 			android:layout_marginRight="8dip" android:layout_centerVertical="true"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
@@ -28,13 +28,15 @@
 		android:layout_width="fill_parent" android:layout_height="55dip"
 		android:layout_marginTop="2dip">
 		<Spinner android:id="@+id/umeng_analyse_feedback_age_spinner"
-			android:layout_alignParentLeft="true" android:layout_width="wrap_content"
+			android:layout_alignParentLeft="true" android:layout_width="140dip"
 			android:layout_height="wrap_content" android:layout_marginLeft="8dip"
-			android:layout_centerVertical="true" />
+			android:layout_centerVertical="true"
+			android:visibility="gone" />
 		<Spinner android:id="@+id/umeng_analyse_feedback_gender_spinner"
 			android:layout_toRightOf="@id/umeng_analyse_feedback_age_spinner"
-			android:layout_marginLeft="7dip" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_centerVertical="true" />
+			android:layout_marginLeft="2dip" android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:layout_centerVertical="true"
+			android:visibility="gone" />
 		<TextView android:id="@+id/umeng_analyse_feedback_submit"
 			android:background="@drawable/umeng_analyse_submit_selector"
 			android:layout_alignParentRight="true" android:layout_width="70dip"
