--- a/floworld/res/layout/appreciate_search_activity.xml
+++ b/floworld/res/layout/appreciate_search_activity.xml
@@ -41,4 +41,26 @@
                 android:visibility="gone"/>
         </FrameLayout>
     </RelativeLayout>
+    <LinearLayout android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="4dip">
+        <EditText android:id="@+id/appreciate_search_keyword"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/appreciate_search_tip" />
+        <Button android:id="@+id/appreciate_search_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/appreciate_search_text"
+            android:textSize="20dip"
+            android:layout_marginLeft="4dip"
+            android:background="@drawable/app_btn_search" />
+    </LinearLayout>
+    <ListView android:id="@+id/appreciate_search_list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:cacheColorHint="#00000000"
+        android:divider="@drawable/app_divider_h_gray">
+    </ListView>
 </LinearLayout>
