--- a/floworld/res/layout/appreciate_search_activity.xml
+++ b/floworld/res/layout/appreciate_search_activity.xml
@@ -22,24 +22,6 @@
             android:text="@string/search_title"
             android:textSize="20dip"
             android:textColor="#000000"/>
-        <FrameLayout android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:paddingRight="10dip"
-            android:background="@drawable/app_btn_green">
-            <ProgressBar android:id="@+id/app_loading_pbar"
-                android:layout_width="24dip"
-                android:layout_height="24dip"
-                android:indeterminateDrawable="@anim/app_refresh_progress"
-                android:layout_gravity="center_horizontal"/>
-            <ImageView android:id="@+id/app_loading_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/app_refresh"
-                android:src="@drawable/app_icon_refresh"
-                android:visibility="gone"/>
-        </FrameLayout>
     </RelativeLayout>
     <LinearLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -57,6 +39,12 @@
             android:layout_marginLeft="4dip"
             android:background="@drawable/app_btn_search" />
     </LinearLayout>
+    <TextView android:id="@+id/app_loading_tip"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:gravity="center"
+            android:text="@string/app_loading"
+            android:visibility="gone"/>
     <ListView android:id="@+id/appreciate_search_list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
