show fail msg when load data fail

--- a/floworld/res/layout/discuss_tab_activity.xml
+++ b/floworld/res/layout/discuss_tab_activity.xml
@@ -9,11 +9,13 @@
         android:orientation="vertical"
         android:gravity="center"
         android:padding="5dip">
-        <ProgressBar android:layout_width="24dip"
+        <ProgressBar android:id="@+id/app_loading_pbar"
+            android:layout_width="24dip"
             android:layout_height="24dip"
             android:indeterminateDrawable="@anim/app_refresh_progress"
             android:layout_gravity="center"/>
-        <TextView android:layout_width="wrap_content"
+        <TextView android:id="@+id/app_loading_tip"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_loading"
             android:padding="5dip"
