--- a/floworld/res/layout/appreciate_tab_list_item.xml
+++ b/floworld/res/layout/appreciate_tab_list_item.xml
@@ -24,17 +24,27 @@
         android:layout_centerVertical="true"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="horizontal">
-        <TextView android:id="@+id/item_text"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:textSize="20dip"
-            android:textColor="#192F06" >
+        android:orientation="vertical">
+        <LinearLayout android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView android:id="@+id/item_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20dip"
+                android:textColor="#192F06" >
+            </TextView>
+            <ImageView android:id="@+id/item_new_image"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:visibility="gone"
+                android:src="@drawable/app_text_new"/>
+        </LinearLayout>
+        <TextView android:id="@+id/item_text_description"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:textSize="14dip"
+                android:textColor="#892F06" >
         </TextView>
-        <ImageView android:id="@+id/item_new_image"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:visibility="gone"
-            android:src="@drawable/app_text_new"/>
     </LinearLayout>
 </RelativeLayout>
