--- a/floworld/res/layout/appreciate_tab_list_item.xml
+++ b/floworld/res/layout/appreciate_tab_list_item.xml
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:textSize="14dip"
-                android:textColor="#892F06" >
+                android:textColor="#888888" >
         </TextView>
     </LinearLayout>
 </RelativeLayout>
