--- a/healthworld/res/layout/infomation_tab_activity.xml
+++ b/healthworld/res/layout/infomation_tab_activity.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent">
     <LinearLayout android:id="@+id/app_loading"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:orientation="vertical"
         android:gravity="center"
         android:padding="5dip">
@@ -25,6 +25,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:cacheColorHint="#00000000"
-         android:divider="@drawable/app_divider_h_gray">
+        android:fastScrollEnabled="true"
+        android:divider="@drawable/app_divider_h_gray">
     </ListView>
 </LinearLayout>
