--- a/healthworld/res/layout/infomation_tab_list_item.xml
+++ b/healthworld/res/layout/infomation_tab_list_item.xml
@@ -12,17 +12,22 @@
     <LinearLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginLeft="8dip">
+        android:layout_marginLeft="8dip"
+        android:layout_marginRight="8dip"
+        android:layout_marginBottom="8dip"
+        android:layout_marginTop="2dip">
         <TextView android:id="@+id/item_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="2dip"
             android:textSize="16dip"
+            android:textStyle="bold"
             android:textColor="#192F06">
         </TextView>
         <TextView android:id="@+id/item_text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="10dip"
+            android:textSize="15dip"
             android:textColor="#192F06">
         </TextView>
     </LinearLayout>
