--- a/healthworld/res/layout/infomation_tab_activity.xml
+++ b/healthworld/res/layout/infomation_tab_activity.xml
@@ -21,11 +21,11 @@
             android:padding="5dip"
             android:textColor="@color/gray_light"/>
     </LinearLayout>
-    <ListView android:id="@+id/infomation_tab_list"
+    <com.tianxia.lib.baseworld.widget.RefreshListView android:id="@+id/infomation_tab_list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:cacheColorHint="#00000000"
         android:fastScrollEnabled="true"
         android:divider="@drawable/app_divider_h_gray">
-    </ListView>
+    </com.tianxia.lib.baseworld.widget.RefreshListView>
 </LinearLayout>
