--- a/healthworld/res/layout/category_tab_list_item.xml
+++ b/healthworld/res/layout/category_tab_list_item.xml
@@ -5,11 +5,11 @@
     <ImageView android:id="@+id/item_image"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="20dip"
-            android:layout_marginRight="20dip"
-            android:layout_marginTop="10dip"
+            android:layout_width="48dip"
+            android:layout_height="48dip"
+            android:layout_marginLeft="15dip"
+            android:layout_marginRight="15dip"
+            android:layout_marginTop="11dip"
             android:layout_marginBottom="10dip"/>
     <ImageView android:id="@+id/item_arrow"
             android:layout_alignParentRight="true"
@@ -19,13 +19,22 @@
             android:layout_marginLeft="15dip"
             android:layout_marginRight="15dip"
             android:src="@drawable/app_arrow"/>
-    <TextView android:id="@+id/item_text"
-        android:layout_toLeftOf="@id/item_arrow"
+    <LinearLayout android:layout_toLeftOf="@id/item_arrow"
         android:layout_toRightOf="@id/item_image"
-        android:layout_width="fill_parent" 
         android:layout_centerVertical="true"
-        android:layout_height="fill_parent" 
-        android:textSize="20dip"
-        android:textColor="#192F06" >
-    </TextView>
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
+        <TextView android:id="@+id/item_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dip"
+            android:textColor="#192F06" />
+        <TextView android:id="@+id/item_text_describe"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="健康饮食,健康生活"
+            android:textSize="15dip"
+            android:textColor="#888888" />
+        </LinearLayout>
 </RelativeLayout>
