--- a/healthworld/res/layout/infomation_tab_activity.xml
+++ b/healthworld/res/layout/infomation_tab_activity.xml
@@ -3,6 +3,10 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+    <LinearLayout android:id="@+id/AdLinearLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal" />
     <LinearLayout android:id="@+id/app_loading"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
