--- a/healthworld/res/layout/digest_tab_activity.xml
+++ b/healthworld/res/layout/digest_tab_activity.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <ListView android:id="@+id/category_tab_list"
+    <ListView android:id="@+id/digest_tab_list"
         android:layout_width="fill_parent" 
         android:layout_height="fill_parent"
         android:divider="@drawable/app_divider_h_gray"
