--- a/healthworld/res/layout/digest_tab_list_item.xml
+++ b/healthworld/res/layout/digest_tab_list_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <ImageView android:id="@+id/item_image"
+    <com.tianxia.widget.image.SmartImageView android:id="@+id/item_image"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_width="48dip"
