--- a/healthworld/res/layout/main_tab_frame.xml
+++ b/healthworld/res/layout/main_tab_frame.xml
@@ -31,6 +31,7 @@
         android:layout_below="@id/main_tab_banner"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_weight="1"
         android:background="@color/bg">
     </LinearLayout>
 </RelativeLayout>
