--- a/healthworld/res/layout/digest_tab_activity.xml
+++ b/healthworld/res/layout/digest_tab_activity.xml
@@ -4,9 +4,10 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <ListView android:id="@+id/digest_tab_list"
-        android:layout_width="fill_parent" 
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:divider="@drawable/app_divider_h_gray"
-        android:cacheColorHint="#00000000">
+        android:cacheColorHint="#00000000"
+        android:layoutAnimation="@anim/digest_list_item_anim_config">
     </ListView>
 </LinearLayout>
