--- a/baseworld/res/layout/drag_list_item.xml
+++ b/baseworld/res/layout/drag_list_item.xml
@@ -3,18 +3,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/drag_list_item_text"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/drag_item_normal_height"
-        android:paddingLeft="5dip"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:gravity="center_vertical"/>
     <ImageView android:id="@+id/drag_list_item_image"
         android:src="@drawable/app_drag"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/drag_item_normal_height"/>
+    <TextView android:id="@+id/drag_list_item_text"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/drag_item_normal_height"
+        android:paddingLeft="5dip"
+        android:singleLine="true"
+        android:textColor="#000000"
+        android:textSize="14dip"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@id/drag_list_item_image"
+        android:gravity="center_vertical"/>
 </RelativeLayout>
